change readme and update home page
